--- a/assignment_7.ipynb
+++ b/assignment_7.ipynb
@@ -16,12 +16,168 @@
    "source": [
     "## 1. \n",
     "\n",
-    "- What is the expected value of a single die roll? \n",
-    "- What is the expected value of rolling two dice and adding the results together?\n",
-    "- What is the expected winnings of any gamble in European roulette?\n",
+    "**What is the expected value of a single die roll?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c71303b",
+   "metadata": {},
+   "source": [
+    "* The **Expected Value** or **Expectation** of a random variable $X$ is\n",
+    "$$\n",
+    "\\mathbb{E}[X] = \\begin{cases} \\int_{x \\in \\text{supp}(X)} x \\times f_X(x)dx, & \\text{$X$ continuous}\\\\\n",
+    "\\sum_{x \\in \\text{supp}(X)} x \\times m_X(x), & \\text{$X$ discrete}.\n",
+    "\\end{cases}\n",
+    "$$\n",
     "\n",
-    "- Imagine you roll a die, and you record the value you get. But, if you roll a six, you roll again, and add that value. What is the expected value?\n",
-    "- Imagine that the process described in the last question continues until you fail to roll a six. What is the expected value of the process? (This can be tricky, you can simulate it to get an answer if you prefer. Hint: The answer is 4.2.)"
+    "- A die roll, X, is discrete, so we use the discrete one where $m_x(x) = P(X=x)$.\n",
+    "- There are 6 possible outcomes {1,2,3,4,5,6}\n",
+    "- Each has probability 1/6\n",
+    "- $m_x(x) = 1/6$\n",
+    "- $\n",
+    "\\mathbb{E}[X] = \\sum_{x=1}^{6} x \\times \\frac{1}{6}\n",
+    "= \\frac{1}{6}(1 + 2 + 3 + 4 + 5 + 6)\n",
+    "= 3.5.\n",
+    "$\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebe5074f",
+   "metadata": {},
+   "source": [
+    "**What is the expected value of rolling two dice and adding the results together?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68ea9f9f",
+   "metadata": {},
+   "source": [
+    "- Still discrete\n",
+    "- $X_1$ = outcome of die 1\n",
+    "- $X_2$ = outcome of die 2\n",
+    "- Each has support {1,2,3,4,5,6} with $P(X_i=x)$\n",
+    "- Expectation is linear so $\n",
+    "\\mathbb{E}[S] = {E}[X_1 + X_2] = {E}[X_1] + {E}[X_2] $\n",
+    "- ${E}[X_i]$ = 3.5, so ${E}[S]$ = 7\n",
+    "- Expected value of rolling 2 dice and adding the results together is 7.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1ac6c33",
+   "metadata": {},
+   "source": [
+    "**What is the expected winnings of any gamble in European roulette?**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bef1c47e",
+   "metadata": {},
+   "source": [
+    "- There are 37 possible outcomes: A green 0, and the numbers 1 to 36 in red and black\n",
+    "- The 0 causes most bets to lose\n",
+    "- Your net winning winnings (profit) on a single $1 bet, X, is discrete with outcomes: \n",
+    "    - Win: You get payout\n",
+    "    - Lose: -$1 \n",
+    "- ${E}[X]$ = (probability of win) * (payout when win) + (probability of loss) * (loss when lose)\n",
+    "- For an example with a 35:1 payout where you gain $35 if you win, and lose $1 if you lose\n",
+    "- ${E}[X]$= 1/37​(+35)+ 36/37 ​(−1) = (35−36)/37​ =−1/37 ​≈ −0.0270\n",
+    "- So your expected **losings** is about 2.7 cents per $1 bet\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fc38ce5",
+   "metadata": {},
+   "source": [
+    "**Imagine you roll a die, and you record the value you get. But, if you roll a six, you roll again, and add that value. What is the expected value?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81c05479",
+   "metadata": {},
+   "source": [
+    "- The expected value of the total value recorded by the rule, X is: \n",
+    "$E[X] = 1/6 ​* (1) + 1/6 * ​(2) + 1/6​ * (3) + 1/6 * ​(4) + 1/6 * ​(5) + 1/6 * ​(E[6+X]) $\n",
+    "- Simplifying: \n",
+    "    - $E[X] = 1/6 * (1+2+3+4+5) + 1/6 *​(6+E[X]).$\n",
+    "    - $E[X] = 1/6 (15) + 1/6 *​(6+E[X]).$\n",
+    "- Solve for $E[X]$ by multiplying both sides by 6 to clear denominator: \n",
+    "    - $6E[X] =15+6+E[X].$\n",
+    "    - $5E[X]=21$\n",
+    "    - $\\boxed{\\mathbb{E}[X] = 4.2.}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c4d18c6",
+   "metadata": {},
+   "source": [
+    "**Imagine that the process described in the last question continues until you fail to roll a six. What is the expected value of the process? (This can be tricky, you can simulate it to get an answer if you prefer. Hint: The answer is 4.2.)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7399719a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulated expected value: 4.2052\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def roll_process():\n",
+    "    total = 0\n",
+    "    while True:\n",
+    "        roll = random.randint(1, 6)\n",
+    "        total += roll\n",
+    "        if roll != 6:\n",
+    "            break\n",
+    "    return total\n",
+    "\n",
+    "# Simulate it many times\n",
+    "trials = 1_000_000\n",
+    "results = [roll_process() for _ in range(trials)]\n",
+    "expected_value = sum(results) / trials\n",
+    "\n",
+    "print(f\"Simulated expected value: {expected_value:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "934c3844",
+   "metadata": {},
+   "source": [
+    "- This is because even though you could theoretically roll sixes forever, the probability of doing so decreases exponentially:\n",
+    "\n",
+    "    - Probability of 1 six in a row = 1/6\n",
+    "\n",
+    "    - Probability of 2 sixes in a row = (1/6)^2 = 1/36\n",
+    "\n",
+    "    - Probability of 3 sixes in a row = (1/6)^3 = 1/216\n",
+    "\n",
+    "    - …and so on\n",
+    "\n",
+    "- So the total expected value converges to around 4.2 still. "
    ]
   },
   {
@@ -30,9 +186,24 @@
    "metadata": {},
    "source": [
     "## 2. \n",
-    "- Compute the expected value for a uniform random variable.\n",
-    "- Show that $\\mathbb{E}[a+bX] = a + b\\mathbb{E}[X]$\n",
-    "- Show, by example, that $v(\\mathbb{E}[X]) \\neq \\mathbb{E}[v(X)]$, if $v(x) \\neq a+bx$. For example, try $v(y) = y^2$ or $v(y)=\\sqrt{y}$ with a Bernoulli or uniform or normally distributed random variable. This can be an important thing to remember: The expectation of a transformed random variable is not the transformation of the expected value."
+    "**Compute the expected value for a uniform random variable.**\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ace533f4",
+   "metadata": {},
+   "source": [
+    "**Show that $\\mathbb{E}[a+bX] = a + b\\mathbb{E}[X]$**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e723b1c2",
+   "metadata": {},
+   "source": [
+    "**Show, by example, that $v(\\mathbb{E}[X]) \\neq \\mathbb{E}[v(X)]$, if $v(x) \\neq a+bx$. For example, try $v(y) = y^2$ or $v(y)=\\sqrt{y}$ with a Bernoulli or uniform or normally distributed random variable. This can be an important thing to remember: The expectation of a transformed random variable is not the transformation of the expected value.**"
    ]
   },
   {
@@ -120,8 +291,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
