--- a/assignment_7.ipynb
+++ b/assignment_7.ipynb
@@ -110,17 +110,10 @@
    "metadata": {},
    "source": [
     "- The expected value of the total value recorded by the rule, X is: \n",
-    "$\n",
-    "E[X] = 1/6 ​* (1) + 1/6 * ​(2) + 1/6​ * (3) + 1/6 * ​(4) + 1/6 * ​(5) + \\dfrac{1}{6}\\left(6 + \\dfrac{1}{6}1+\\dfrac{1}{6}2+\\dfrac{1}{6}3+\\dfrac{1}{6}4+\\dfrac{1}{6}5+\\dfrac{1}{6}6 \\right)\n",
-    "$\n",
-    "=\n",
-    "$$\n",
-    "\\mathbb{E}[X] = \\dfrac{1}{6}1+\\dfrac{1}{6}2+\\dfrac{1}{6}3+\\dfrac{1}{6}4+\\dfrac{1}{6}5+\\dfrac{1}{6}\\left(6 + 3.5\\right)\n",
-    "$$\n",
-    "or\n",
-    "$$\n",
-    "\\mathbb{E}[X] = 3.5+\\dfrac{3.5}{6} = \\frac{24.5}{6} \\approx 4.083\n",
-    "$$"
+    "\n",
+    "- $E[X] = 1/6 ​* (1) + 1/6 * ​(2) + 1/6​ * (3) + 1/6 * ​(4) + 1/6 * ​(5) + \\dfrac{1}{6}\\left(6 + \\dfrac{1}{6}1+\\dfrac{1}{6}2+\\dfrac{1}{6}3+\\dfrac{1}{6}4+\\dfrac{1}{6}5+\\dfrac{1}{6}6 \\right)$ = \n",
+    "- $\\mathbb{E}[X] = \\dfrac{1}{6}1+\\dfrac{1}{6}2+\\dfrac{1}{6}3+\\dfrac{1}{6}4+\\dfrac{1}{6}5+\\dfrac{1}{6}\\left(6 + 3.5\\right) $ or\n",
+    "- $\\mathbb{E}[X] = 3.5+\\dfrac{3.5}{6} = \\frac{24.5}{6} \\approx 4.083$"
    ]
   },
   {
